--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/datetimepicker": "^3.0.9",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-firebase/app": "^10.8.0",
+    "@react-native-firebase/auth": "^10.8.0",
+    "@react-native-firebase/firestore": "^10.8.0",
     "react": "16.13.1",
     "react-native": "0.63.4"
   },
