--- a/package.json
+++ b/package.json
@@ -18,8 +18,36 @@
     "@react-native-firebase/app": "^10.8.0",
     "@react-native-firebase/auth": "^10.8.0",
     "@react-native-firebase/firestore": "^10.8.0",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.3",
+    "@react-navigation/material-bottom-tabs": "^5.3.13",
+    "@react-navigation/material-top-tabs": "^5.3.13",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-chart": "^1.0.8-beta",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-date-picker": "^3.2.9",
+    "react-native-elements": "^3.2.0",
+    "react-native-gesture-handler": "^1.10.1",
+    "react-native-letter-spacing": "^0.0.6",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-paper": "^4.7.1",
+    "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.17.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-tab-view": "^2.15.2",
+    "react-native-table-component": "^1.2.1",
+    "react-native-vector-icons": "^8.0.0",
+    "react-native-webview": "^11.2.3",
+    "uuid-random": "^1.3.2",
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
