--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "dependencies": "^0.0.1",
+    "install": "^0.13.0",
     "moment": "^2.29.1",
+    "peer": "^0.6.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-chart": "^1.0.8-beta",
