--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "depcheck": "^1.4.0",
     "dependencies": "^0.0.1",
     "install": "^0.13.0",
     "moment": "^2.29.1",
@@ -41,6 +42,7 @@
     "react-native-paper": "^4.7.1",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^8.0.4",
+    "react-native-picklist": "^1.4.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
