--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "peer": "^0.6.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-calendars": "^1.1254.0",
     "react-native-chart": "^1.0.8-beta",
     "react-native-chart-kit": "^6.11.0",
     "@react-native-community/async-storage": "^1.12.1",
